--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </ul>
         </main>
 
+        <script src="scripts/consts.js"></script>
         <script src="scripts/script.js"></script>
     </body>
 </html>
