removed onclick from matched cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <main>
             <h1><strong>PARROT CARD GAME</strong></h1>
-            <ul class="ctn-cards">
+            <ul class="ctn-cards unselectable">
             </ul>
         </main>
 
