--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         </head>
     <body>
         <main>
+            <div class="ctn-status">
+                <span class="score">SCORE</span>
+                <span class="timer">TIMER</span>
+            </div>
+
             <h1><strong>PARROT CARD GAME</strong></h1>
+
             <ul class="ctn-cards unselectable">
             </ul>
         </main>
