--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body>
         <main>
             <div class="ctn-status">
-                <span class="score">SCORE</span>
-                <span class="timer">TIMER</span>
+                <span class="score">SCORE: 0</span>
+                <span class="timer">0:00</span>
             </div>
 
             <h1><strong>PARROT CARD GAME</strong></h1>
