--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
         <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
         <script src="scripts/consts.js"></script>
+        <script src="scripts/helpers/helperString.js"></script>
+        <script src="scripts/ranking.js"></script>
         <script src="scripts/script.js"></script>
     </body>
 </html>
