--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
         <title> PARROT CARD GAME </title>
     </head>
-    <body>
+    <body onload="onLoad()">
 
         <header class="ctn-status">
             <span class="score">SCORE: 0</span>
@@ -46,7 +46,9 @@
 
         <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
         <script src="scripts/consts.js"></script>
-        <script src="scripts/helpers/helperString.js"></script>
+        <script src="scripts/helpers/string-utils.js"></script>
+        <script src="scripts/helpers/sorter.js"></script>
+        <script src="scripts/score.js"></script>
         <script src="scripts/ranking.js"></script>
         <script src="scripts/script.js"></script>
     </body>
