confirm window on new game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <header class="ctn-menu">
-            <ion-button title="Reiniciar" onclick="startGame()">
+            <ion-button title="Reiniciar" onclick="restartGame()">
                 <ion-icon class="opt-menu" name="refresh-outline"></ion-icon>
             </ion-button>
             <ion-button title="Ranking" onclick="showRanking(false)">
@@ -48,8 +48,9 @@
         <script src="scripts/consts.js"></script>
         <script src="scripts/helpers/string-utils.js"></script>
         <script src="scripts/helpers/sorter.js"></script>
+        <script src="scripts/local-storage.js"></script>
         <script src="scripts/score.js"></script>
         <script src="scripts/ranking.js"></script>
-        <script src="scripts/script.js"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
